# wtview

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: architect.md  backend.md  code-reviewer.md  frontend.md  git-specialist.md  testing.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CODE_SIGNING.md  architecture.md  backend-api.md  rust-style-guide.md  typescript-style-guide.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: branches.rs  git_ops.rs  mod.rs  repository.rs  worktree.rs
src-tauri/src/git/: mod.rs  operations.rs  worktree_manager.rs
src/components/git/: BranchSelector.test.tsx  BranchSelector.tsx  CommitPanel.test.tsx  CommitPanel.tsx  RemoteActions.test.tsx  RemoteActions.tsx  index.ts
src/components/layout/: Header.tsx  MainContent.tsx  Sidebar.tsx  ThemeToggle.tsx  index.ts
src/hooks/: index.ts  useBranches.test.ts  useBranches.ts  useGitOperations.test.ts  useGitOperations.ts  useTheme.ts  useWorktrees.test.ts  useWorktrees.ts
src/lib/: tauri.test.ts  tauri.ts  utils.test.ts
src/stores/: appStore.test.ts  appStore.ts
src/styles/: globals.css
src/test/: setup.ts  test-utils.tsx
src/types/: worktree.ts
(+10 files in other folders)
